--- a/cfcai-frontend/src/styles.scss
+++ b/cfcai-frontend/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
+@import 'assets/cover.scss';
+
+html, body {
+  height: 100%;
+  background-color: #333;
+}
+
+body {
+  display: flex;
+  color: #fff;
+  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
