--- a/cfcai-frontend/src/app/app.component.html
+++ b/cfcai-frontend/src/app/app.component.html
@@ -1,33 +1,52 @@
+<!-- <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"> -->
+<header class="masthead mb-auto">
+  <div class="inner">
+    <h3 class="masthead-brand">Fake Corona</h3>
+    <nav class="nav nav-masthead justify-content-center">
+      <a class="nav-link active" href="/">Home</a>
+      <a class="nav-link" href="https://wtheory.io">Hackje</a>
+      <a class="nav-link" href="#">Contact</a>
+    </nav>
+  </div>
+</header>
 
-  <!-- <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"> -->
-    <header class="masthead mb-auto">
-      <div class="inner">
-        <h3 class="masthead-brand">FakeCorona</h3>
-        <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="https://wtheory.io">Hackje</a>
-          <a class="nav-link" href="#">Contact</a>
-        </nav>
-      </div>
-    </header>
+<main role="main" class="inner cover">
+  <h1 class="cover-heading">Stop Fake News!</h1>
+  <p class="lead">Stop fake news as fakes are the virus of the internet!</p>
+  <p class="lead">
+    <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+  </p>
+</main>
+<form name="verifyForm">
+  <div class="form-group">
+    <label for="articleSnippet">Article snippet</label>
+    <textarea [(ngModel)]="model.article" name="article" class="form-control" id="articleSnippet" rows="3"></textarea>
+  </div>
+  <button (click)='onClick()' role="" class="btn btn-lg btn-primary">Verify</button>
+</form>
 
-    <main role="main" class="inner cover">
-      <h1 class="cover-heading">Stop Fake News!</h1>
-      <p class="lead">Stop fake news as fakes are the virus of the internet!</p>
-      <p class="lead">
-        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-      </p>
-    </main>
-    <form name="verifyForm">
-      <div class="form-group">
-        <label for="articleSnippet">Article snippet</label>
-        <textarea [(ngModel)]="model.article" name="article" class="form-control" id="articleSnippet" rows="3" ></textarea>
-      </div>
-      <button (click)='onClick()' role="" class="btn btn-lg btn-primary">Verify</button>
-    </form>
 
-    <footer class="mastfoot mt-auto">
-      <div class="inner">
-        <p>Created with love, by <a href="https://wtheory.io">hackje</a>.</p>
+
+<div class="card mb-3" text-white bg-dark  >
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <circle-progress [percent]="progress" [radius]="50" [outerStrokeWidth]="10" [innerStrokeWidth]="10" [space]="-10"
+      [outerStrokeColor]="'#4882c2'" [innerStrokeColor]="'#e7e8ea'" [titleFontSize]="24" [unitsFontSize]="24"
+      [showSubtitle]="false" [animation]="true" [animationDuration]="300" [startFromZero]="false" [responsive]="true">
+    </circle-progress>
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Validation Result</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
-    </footer>
+    </div>
+  </div>
+</div>
+
+<footer class="mastfoot mt-auto">
+  <div class="inner">
+    <p>Created with love, by <a href="https://wtheory.io">hackje</a>.</p>
+  </div>
+</footer>
