--- a/cfcai-frontend/src/app/app.component.html
+++ b/cfcai-frontend/src/app/app.component.html
@@ -1,18 +1,6 @@
 <!-- <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"> -->
 <header class="masthead mb-auto">
   <div class="inner">
-    <h3 class="masthead-brand">Fake Corona</h3>
-    <nav class="nav nav-masthead justify-content-center">
-      <a class="nav-link active" href="/">Home</a>
-      <a class="nav-link" href="https://wtheory.io">Hackje</a>
-      <a class="nav-link" href="#">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<!-- <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"> -->
-<header class="masthead mb-auto">
-  <div class="inner">
     <h3 class="masthead-brand">Corona Fact Check AI</h3>
     <nav class="nav nav-masthead justify-content-center">
       <a class="nav-link active" href="#">Home</a>
@@ -42,11 +30,11 @@
 </form>
 
 
-<div class="card mb-3" text-white bg-dark>
+<div class="card mb-3 text-dark ">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <circle-progress [percent]="progress" [radius]="50" [outerStrokeWidth]="10" [innerStrokeWidth]="10" [space]="-10"
-        [outerStrokeColor]="'#4882c2'" [innerStrokeColor]="'#e7e8ea'" [titleFontSize]="24" [unitsFontSize]="24"
+      <circle-progress [percent]="validationModel.reliability * 100" [radius]="20" [outerStrokeWidth]="5" [innerStrokeWidth]="5" [space]="-5"
+        [outerStrokeColor]="'#4882c2'" [innerStrokeColor]="'#e7e8ea'" [titleFontSize]="12" [unitsFontSize]="12"
         [showSubtitle]="false" [animation]="true" [animationDuration]="300" [startFromZero]="false" [responsive]="true">
       </circle-progress>
     </div>
