--- a/cfcai-frontend/src/app/app.component.html
+++ b/cfcai-frontend/src/app/app.component.html
@@ -40,10 +40,9 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">Validation Result</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title">Related reliable source</h5>
+        <p class="card-text">{{reliableSourceExcerpt}}</p>
+        <p class="card-text"><small class="text-muted"><a href="{{url}}" class="url-link">{{urlPlaceholder}}</a></small></p>
       </div>
     </div>
   </div>
